--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Yasse Shaikh
+name: Yasser Shaikh
 
 # Short bio or description (displayed in the header)
 description: Developer at Agoda.com
